fixed some layout issues with the media queries

--- a/styles/main.css
+++ b/styles/main.css
@@ -192,4 +192,9 @@ body{
 	background-image: none;
 	padding-bottom: 20px;
 }
+.name, .hours, .contact{
+	text-align: center;
+	margin-top: 10px;
+
+}
 }
